# examples

./: .gitignore  README.md
CUA-CTA-Validator/: README.md  cua-cta-validator.ts  package-lock.json  package.json
ChatWithWebsite-Scrape/: .gitignore  README.md  package-lock.json  package.json  scrapechat.ts  tsconfig.json
Extract-github-analyzer/: README.md  github-summarizer.ts  package-lock.json  package.json
Maps-lead-finder/: .env.example  .gitignore  README.md  maps-lead-finder.ts  package-lock.json  package.json
Trend-summary/: README.md  TrendSummary.ts  package-lock.json  package.json
agents/budget-travel-agent/: README.md  main.py  pyproject.toml
agents/budget-travel-agent/src/: chatgpt_parser.py  location_validator.py
article-tts/: README.md  app.py  pyproject.toml  requirements.txt
changelog-builder/: .gitignore  README.md  changelog_generator.py  main.py  pyproject.toml
company-researcher/: README.md  package-lock.json  (+2 more)
cookbook/: .gitignore  README.md  apartment-finder.ipynb  browser-use-authed-flows.ipynb  browser-use-hybrid-flows.ipynb  browser_use.ipynb  browser_use_complex.ipynb  changelog-builder.ipynb  code-solver-browser-use.ipynb  code-solver.ipynb  code_solver.ipynb  comic-trip-planner.ipynb  company-researcher.ipynb  company_researcher.ipynb  concert-ticket-finder.ipynb  docs-qna.ipynb  docs_qna.ipynb  documentation-based-coding-agent.ipynb  documentation_analyzer.ipynb  doordash-location-recommender.ipynb  doordash_location_recommender.ipynb  feature-recognition.ipynb  find_other_social_content.ipynb  flight-ticket-search.ipynb  hacker-news-summarizer.ipynb  ingredients-based-recipe-suggestor.ipynb  local-events-finder.ipynb  menu-recommendations.ipynb  movie-review-researcher.ipynb  news-analyst.ipynb  news-mcp-server.ipynb  news_analyst.ipynb  next-chess-move.ipynb  next_chess_move.ipynb  pyproject.toml  requirements.txt  review-analyzer.ipynb  shopping-agents-with-vision.ipynb  shopping-assistant.ipynb  shopping_assistent.ipynb  (+7 more)
daytrip-planner/: chatgpt_parser.py  location_validator.py  main.py  pyproject.toml  requirements.txt  test.py
tweet-fetcher/: .gitignore  README-JS.md  collect-100-tweets.js  config.py  env.example  index-demo.js  index.js  main.py  package-lock.json  package.json  pyproject.toml  schemas.py  view-tweets.js
(+15 files in other folders)
