[project]
name = "cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "hyperbrowser>=0.33.0",
    "jupyter>=1.1.1",
    "mcp>=1.3.0",
    "openai>=1.65.5",
    "playwright>=1.50.0",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "isort>=6.0.1",
    "ruff>=0.9.10",
]
