[project]
name = "daytrip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hyperbrowser>=0.33.0",
    "openai>=1.65.4",
    "playwright>=1.50.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.0",
]
